--- a/config/locales/rails_defaults_en.yml
+++ b/config/locales/rails_defaults_en.yml
@@ -9,7 +9,7 @@ en:
       long: "%B %d, %Y"
 
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
-    abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
+    abbr_day_names: [S, M, T, W, T, F, S]
 
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
     month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
