Add driver email field to views [#98939210]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -176,6 +176,7 @@ en:
     one: "1 error prohibited this driver from being saved"
     other: "%{count} errors prohibited this driver from being saved"
   driver_form_name: "Name"
+  driver_form_email: "Email"
   driver_form_active: "Active"
   paid: "Paid"
   driver_form_associated_user: "Associated User"
