trip filters UI; added trip_filter service class to handle filtering logic

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -683,6 +683,9 @@ en:
   filter: 'Filter'
   reset: 'Reset'
   all: 'All'
+  status: 'Status'
+  scheduled: 'Scheduled'
+  unscheduled: 'Unscheduled'
 
   locales:
     en: "English"
