--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -275,6 +275,7 @@ en:
   no_users_yet: "No users yet."
   role: "Role"
   last_login: "Last Login"
+  expires_at: "Account Expires At"
   change_password: "Change Password"
   change_role: "Change role"
   delete_role_confirm: "Are you sure?"
@@ -605,6 +606,10 @@ en:
   password: "Password"
   password_confirmation: "Password Confirmation"
   change_password_submit: "Update"
+  change_expiration_heading: "Change Account Expiration"
+  user_expires_at: "Inactivation Date"
+  user_inactivation_reason: "Reasons"
+  change_expiration_submit: "Update"
   #vehicle maintenance
   service_date: "Service Date"
   invoice_date: "Invoice Date"
