--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -187,6 +187,12 @@ en:
   operating_hours_closed: "Closed"
   operating_hours_24_hours: "24 Hours"
   operating_hours_open: "Open ..."
+  driver_histories_heading: "Events"
+  driver_histories_add_link_title: "Add event"
+  driver_histories_remove_link_title: "Remove this event"
+  driver_history_form_event: "Name"
+  driver_history_form_notes: "Notes"
+  driver_history_form_event_date: "Date"
   #funding_source
   funding_source_form_name: "Name"
   funding_source_label: "Available to:"
