--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,7 +80,7 @@ en:
     other: "%{count} errors prohibited this customer from being saved:"
   ignore_duplicates: "Ignore duplicates"
   group: "Group"
-  first_name: "First Name:"
+  first_name: "First Name"
   middle_initial: "Middle Initial"
   last_name: "Last Name:"
   alternate_phone_number: "Alternate Phone"
@@ -264,6 +264,7 @@ en:
   edit_ethnicity_provider_label: "Provider"
   edit_ethnicity_name_label: "Name"
   #Providers
+  customer_authorized_providers: "Authorized Providers"
   provider_form_name: "Name"
   provider_form_logo: "Logo"
   provider_form_dispatch: "Dispatch enabled"
