added new run views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -565,6 +565,8 @@ en:
   new_run_link_text: "New Run"
   new_run_heading: "New Run"
   new_run_submit: "Submit"
+  runs: 'Runs'
+  new_run: 'New Run'
   #shared
   generic_error_message:
       one: "%{count} error prohibited this record from being saved:"
@@ -709,6 +711,13 @@ en:
   from_date: 'From Date'
   to_date: 'To Date'
   from_date_cannot_later_than_to_date: "From Date can not be later than To Date"
+  # runs table
+  run_date_column: 'Date'
+  run_start_time_column: 'Start Time'
+  run_end_time_column: 'End Time'
+  run_vehicle_column: 'Vehicle'
+  run_driver_column: 'Driver'
+  run_result_column: 'Result'
 
 
   locales:
