--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -702,7 +702,8 @@ en:
   save: "Save"
   confirm_message: "Are you sure you want to delete this record?"
   #filters
-  filter: 'Filter'
+  trip_filter: 'Filter'
+  run_filter: 'Filter'
   reset: 'Reset'
   all: 'All'
   status: 'Status'
@@ -718,6 +719,11 @@ en:
   run_vehicle_column: 'Vehicle'
   run_driver_column: 'Driver'
   run_result_column: 'Result'
+  # ride_trips table
+  trip_purpose_column: 'Purpose'
+  trip_round_trip_column: 'Round Trip?'
+  guest_count_column: 'Guest Count'
+  attendant_count_column: 'Attendant Count'
 
 
   locales:
