Formatting driver page to use bootstrap layout, drivers no longer accepts nested attributes for documents, add driver show page, add remote document forms to driver edit page [#98939218]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -181,25 +181,39 @@ en:
   paid: "Paid"
   driver_form_associated_user: "Associated User"
   driver_form_submit: "Submit"
+  show_driver_heading: "Driver"
   edit_driver_heading: "Edit Driver"
   new_driver_heading: "New Driver"
+  edit_driver_button: "Edit"
+  delete_driver_button: "Delete"
   operating_hours_heading: "Available Hours"
   operating_hours_closed: "Closed"
   operating_hours_24_hours: "24 Hours"
   operating_hours_open: "Open ..."
   driver_histories_heading: "History Events"
-  driver_histories_add_link_title: "Add event"
+  driver_histories_add_link_title: "Add history event"
   driver_histories_remove_link_title: "Remove this event"
   driver_history_form_event: "Name"
   driver_history_form_notes: "Notes"
-  driver_history_form_event_date: "Date"
+  driver_history_form_event_date: "Event Date"
   driver_compliances_heading: "Compliance Events"
-  driver_compliances_add_link_title: "Add event"
+  driver_compliances_add_link_title: "Add compliance event"
   driver_compliances_remove_link_title: "Remove this event"
   driver_compliance_form_event: "Name"
   driver_compliance_form_notes: "Notes"
   driver_compliance_form_due_date: "Due Date"
   driver_compliance_form_compliance_date: "Compliance Date"
+  driver_documents_heading: "Driver Documentation"
+  driver_documents_add_link_title: "Add"
+  #documents
+  document_form_new_heading: "Upload new document"
+  document_form_edit_heading: "Edit document"
+  document_form_description: "Description"
+  document_form_file_name: "File"
+  document_form_file_size: "File Size"
+  document_form_upload_date: "Uploaded At"
+  document_form_file_name_currently: "Current file:"
+  document_form_submit: "Save"
   #funding_source
   funding_source_form_name: "Name"
   funding_source_label: "Available to:"
