Add driver tab and index page [finishes##100021924]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -181,9 +181,14 @@ en:
   driver_form_name: "Name"
   driver_form_email: "Email"
   driver_form_active: "Active"
+  driver_form_available: "Available"
+  driver_available: "Available"
+  driver_unavailable: "Unavailable"
+  drivers_empty: "No drivers exist"
   paid: "Paid"
   driver_form_associated_user: "Associated User"
   driver_form_submit: "Submit"
+  index_driver_heading: "Drivers"
   show_driver_heading: "Driver"
   edit_driver_heading: "Edit Driver"
   new_driver_heading: "New Driver"
@@ -274,6 +279,7 @@ en:
   application_cabs_link_text: "Cab trips"
   application_customers_link_text: "Customers"
   application_reports_link_text: "Reports"
+  application_drivers_link_text: "Drivers"
   application_dispatch_link_text: "Dispatch"
   application_admin_link_text: "Admin"
   current_provider_settings_link_text: "Settings"
