finish scheduling UI workflow; need to find a way to move events on calendar via javascript, without reloading the page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -783,7 +783,7 @@ en:
   not_fit_in_run_schedule: 'Trip schedule does not fit in run schedule'
   vehicle_unavailable: 'Vehicle is not available'
   driver_unavailable: 'Driver is not available'
-
+  unknown_error: 'There was something wrong with the request, please try again.'
 
   locales:
     en: "English"
