Initial setup of recurring driver compliance events controller [#98939234]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -207,8 +207,8 @@ en:
   driver_history_form_error:
     one: "1 error prohibited this driver history from being saved"
     other: "%{count} errors prohibited this driver history from being saved"
-  driver_history_form_new_heading: "New compliance event"
-  driver_history_form_edit_heading: "Edit compliance event"
+  driver_history_form_new_heading: "New history event"
+  driver_history_form_edit_heading: "Edit history event"
   driver_history_form_event: "Name"
   driver_history_form_notes: "Notes"
   driver_history_form_event_date: "Event Date"
@@ -229,6 +229,39 @@ en:
   driver_compliance_form_due_date: "Due Date"
   driver_compliance_form_compliance_date: "Compliance Date"
   driver_compliance_form_submit: "Save"
+  
+  # Recurring Driver Compliance Events
+  recurring_driver_compliances_link_text: "Recurring Driver Compliance Events"
+  recurring_driver_compliances_index_heading: "Recurring Driver Compliance Events"
+  new_recurring_driver_compliance_link_text: "Create Recurring Event"
+  new_recurring_driver_compliance_heading: "New Recurring Event"
+  recurring_driver_compliance_form_error:
+    one: "1 error prohibited this recurring event from being saved"
+    other: "%{count} errors prohibited this recurring event from being saved"
+  recurring_driver_compliance_form_details_header: "Event Details"
+  recurring_driver_compliance_form_details_header_help: "The event name and event notes will be copied to each generated event"
+  recurring_driver_compliance_form_event_name: "Event Name"
+  recurring_driver_compliance_form_event_notes: "Event Notes"
+  recurring_driver_compliance_recurrence_scheduling_heading: "Repeats every"
+  recurring_driver_compliance_form_recurrence_schedule_header: "Scheduling"
+  recurring_driver_compliance_form_recurrence_schedule_header_help: "How often should the event be due, and when should it initially start?"
+  recurring_driver_compliance_form_recurrence_schedule: "Schedule"
+  recurring_driver_compliance_form_recurrence_frequency: "Frequency"
+  recurring_driver_compliance_form_recurrence_notes: "Recurrence Notes"
+  recurring_driver_compliance_form_start_date: "Starting"
+  recurring_driver_compliance_recurrence_future_scheduling_heading: "New Driver Scheduling"
+  recurring_driver_compliance_recurrence_future_scheduling_heading_help: "How should scheduling work for drivers created after the initial start date?"
+  recurring_driver_compliance_form_future_start_rule: "Start Rule"
+  recurring_driver_compliance_form_future_start_schedule: "Schedule"
+  recurring_driver_compliance_form_future_start_frequency: "Frequency"
+  recurring_driver_compliance_form_compliance_date_based_scheduling: "Use Compliance Date Based Scheduling"
+  recurring_driver_compliance_compliance_date_based_scheduling_heading: "Compliance Date Based"
+  recurring_driver_compliance_form_compliance_date_based_scheduling_heading: "Scheduling Options"
+  recurring_driver_compliance_form_compliance_date_based_scheduling_heading_help: "With compliance date based scheduling, only 1 event at a time will be generated per driver. New events will be scheduled only once the previous event has been marked as complete."
+  recurring_driver_compliances_empty: "No recurring driver compliance events exist"
+  recurring_driver_compliance_form_readonly_notice: "You cannot modify the scheduling of this event since events have already been generated from it. However you can still adjust the event name and event notes fields, and those changes will be copied to the generated events."
+  recurring_driver_compliance_form_submit: "Save"
+  recurring_driver_compliance_form_schedule_preview_header: "Example schedule:"
   
   # Documents
   driver_documents_heading: "Driver Documentation"
