--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -842,12 +842,12 @@ en:
   driver_unavailable: 'Driver is not available'
   unknown_error: 'There was something wrong with the request, please try again.'
   # address upload
-  address_file_uploaded: 'Address file has been uploaded.'
+  address_file_uploaded: 'Address file was uploaded.'
   not_authorized: 'You are not authorized.'
   address_file_should_be_csv: 'The address file should be in CSV.'
   address_file_being_uploading: 'There is an address file currently in uploading.'
   select_address_file_to_upload: 'Select a file (.csv) to upload'
-  common_address_upload_summary: 'Summary:'
+  common_address_upload_summary: "Address file was uploaded. Loaded %{count_good} addresses. %{count_bad} bad were skipped, %{count_failed} failed to save, %{count_possible_existing} possible existing."
   upload: 'Upload'
   uploading: 'Uploading'
   upload_common_addresses: 'Upload Addresses'
