implemented field visibility processing for tables: trips, runs, drivers, providers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -856,7 +856,8 @@ en:
   uploading: 'Uploading'
   upload_common_addresses: 'Upload Addresses'
   upload_common_addresses_notes: 'Please refer to address file specifications.'
-
+  # translation editing
+  create_translation: 'Create Translation'
 
   locales:
     en: "English"
