Adding UI for associating documents to history and compliance events [#98939218]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -308,6 +308,7 @@ en:
   document_form_upload_date: "Uploaded At"
   document_form_file_name_currently: "Current file:"
   document_form_submit: "Save"
+  document_download: "Download"
   
   # Document Associations
   document_associations_documents_heading: "Associated Documents"
