--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -356,6 +356,7 @@ en:
   application_customers_link_text: "Customers"
   application_reports_link_text: "Reports"
   application_drivers_link_text: "Drivers"
+  application_vehicles_link_text: "Vehicles"
   application_dispatch_link_text: "Dispatch"
   application_admin_link_text: "Admin"
   current_provider_settings_link_text: "Settings"
@@ -790,7 +791,8 @@ en:
   edit_maintenance_heading: "Edit Maintenance Event"
   new_maintenance_heading: "Add Maintenance Event"
   back_to_provider: "Back"
-  #vehicles
+
+  # Vehicles
   vehicle_form_error_message:
     one: "%{count} error prohibited this vehicle from being saved:"
     other: "%{count} errors sprohibited this vehicle from being saved:"
@@ -810,6 +812,8 @@ en:
   vehicle_show_heading: "Vehicle Details"
   add_maintenance_link_text: "Add Maintenance Event"
   edit_vehicle_link_text: "Edit Vehicle"
+  index_vehicle_heading: "Vehicles"
+  
   # Application Settings
   application_settings_heading: "Application Settings"
   edit_application_settings_heading: "Editing Application Settings"
