--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -834,6 +834,25 @@ en:
   vehicle_maintenance_event_add_link_title: "Add Maintenance Event"
   vehicle_maintenance_event_delete_confirm: "Are you sure?"
   
+  # Vehicle Maintenance Compliances
+  vehicle_maintenance_compliances_heading: "Compliance Events"
+  vehicle_maintenance_compliances_add_link_title: "Add compliance event"
+  vehicle_maintenance_compliances_empty: "No compliance events exist for this driver"
+  vehicle_maintenance_compliance_delete_confirm: "Are you sure you want to delete this compliance event?"
+  vehicle_maintenance_compliance_form_error:
+    one: "1 error prohibited this vehicle compliance from being saved"
+    other: "%{count} errors prohibited this vehicle compliance from being saved"
+  vehicle_maintenance_compliance_form_new_heading: "New compliance event"
+  vehicle_maintenance_compliance_form_edit_heading: "Edit compliance event"
+  vehicle_maintenance_compliance_form_event: "Name"
+  vehicle_maintenance_compliance_form_notes: "Notes"
+  vehicle_maintenance_compliance_form_due_type: "Due Based On"
+  vehicle_maintenance_compliance_form_due_date: "Due Date"
+  vehicle_maintenance_compliance_form_due_mileage: "Due Mileage"
+  vehicle_maintenance_compliance_form_due_string: "Due"
+  vehicle_maintenance_compliance_form_compliance_date: "Compliance Date"
+  vehicle_maintenance_compliance_form_submit: "Save"
+
   # Application Settings
   application_settings_heading: "Application Settings"
   edit_application_settings_heading: "Editing Application Settings"
